--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,14 @@
 <RelativeLayout
-    android:id="@+id/relative"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <RelativeLayout
+        android:id="@+id/relative"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
 
     <ImageView
         android:id="@+id/not"
@@ -28,14 +33,30 @@
         android:layout_marginTop="13dp"
         android:gravity="center" />
 
-    <Button
-        android:id="@+id/save"
-        android:layout_width="wrap_content"
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="14dp"
-        android:gravity="center"
-        android:text="저장" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:gravity="center"
+            android:text="저장" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
+
+
+
+
+
+
